SET(CMAKE_BUILE_TYPE DEBUG)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")

PROJECT(TREE)

INCLUDE_DIRECTORIES(${TREE_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(${TREE_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${TREE_SOURCE_DIR}/test ${TREE_BINARY_DIR}/lib)
